--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -44,23 +44,23 @@ istio:
     admin:
       ingressGateway: admin-ingressgateway
       hosts:
-        - "*.{{ .Values.domain }}"
+        - "*.###ZARF_VAR_ADMIN_DOMAIN###"
       tls:
         key: |
-          ###ZARF_VAR_PUBLIC_KEY###
+          ###ZARF_VAR_ADMIN_KEY###
         cert: |
-          ###ZARF_VAR_PUBLIC_CERT###
+          ###ZARF_VAR_ADMIN_CERT###
         minProtocolVersion: "TLSV1_3"
     public: null
     tenant:
       ingressGateway: tenant-ingressgateway
       hosts:
-        - "*.{{ .Values.domain }}"
+        - "*.###ZARF_VAR_DOMAIN###"
       tls:
         key: |
-          ###ZARF_VAR_PUBLIC_KEY###
+          ###ZARF_VAR_TENANT_KEY###
         cert: |
-          ###ZARF_VAR_PUBLIC_CERT###
+          ###ZARF_VAR_TENANT_CERT###
         minProtocolVersion: "TLSV1_3"
 istioOperator:
   enabled: true
