--- a/k3d/zarf.yaml
+++ b/k3d/zarf.yaml
@@ -43,6 +43,10 @@ components:
     required: true
     import:
       path: ../defense-unicorns-distro
+  - name: cert-manager-namespace-istio-injection
+    required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: cert-manager-chart
     required: true
     import:
