--- a/defense-unicorns-distro/cert-manager/custom-cert-resources.yaml
+++ b/defense-unicorns-distro/cert-manager/custom-cert-resources.yaml
@@ -1,26 +1,34 @@
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: selfsigned-issuer
+# spec:
+#   selfSigned: {}
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: Certificate
+# metadata:
+#   name: bootstrap-ca-cert
+#   namespace: cert-manager
+# spec:
+#   isCA: true
+#   commonName: bootstrap-ca-cert
+#   secretName: bootstrap-ca
+#   privateKey:
+#     algorithm: RSA
+#     size: 4096
+#   issuerRef:
+#     name: selfsigned-issuer
+#     kind: ClusterIssuer
+#     group: cert-manager.io
+# ---
+apiVersion: v1
+kind: Secret
 metadata:
-  name: selfsigned-issuer
-spec:
-  selfSigned: {}
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: bootstrap-ca-cert
-  namespace: cert-manager
-spec:
-  isCA: true
-  commonName: bootstrap-ca-cert
-  secretName: bootstrap-ca
-  privateKey:
-    algorithm: RSA
-    size: 4096
-  issuerRef:
-    name: selfsigned-issuer
-    kind: ClusterIssuer
-    group: cert-manager.io
+  name: bigbang-ca
+stringData:
+  tls.cert: ###ZARF_VAR_PUBLIC_CERT###
+  tls.key: ###ZARF_VAR_PUBLIC_KEY###
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
@@ -29,7 +37,7 @@ metadata:
   namespace: cert-manager
 spec:
   ca:
-    secretName: bootstrap-ca
+    secretName: bigbang-ca
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
@@ -38,7 +46,7 @@ metadata:
   namespace: istio-system
 spec:
   isCA: true
-  commonName: bigbang-istio-gateway
+  commonName: bigbang-admin-istio-gateway
   secretName: admin-cert
   privateKey:
     algorithm: RSA
@@ -55,7 +63,7 @@ metadata:
   namespace: istio-system
 spec:
   isCA: true
-  commonName: bigbang-istio-gateway
+  commonName: bigbang-tenant-istio-gateway
   secretName: tenant-cert
   privateKey:
     algorithm: RSA
