--- a/defense-unicorns-distro/cert-manager/custom-cert-resources.yaml
+++ b/defense-unicorns-distro/cert-manager/custom-cert-resources.yaml
@@ -1,34 +1,26 @@
-# apiVersion: cert-manager.io/v1
-# kind: ClusterIssuer
-# metadata:
-#   name: selfsigned-issuer
-# spec:
-#   selfSigned: {}
-# ---
-# apiVersion: cert-manager.io/v1
-# kind: Certificate
-# metadata:
-#   name: bootstrap-ca-cert
-#   namespace: cert-manager
-# spec:
-#   isCA: true
-#   commonName: bootstrap-ca-cert
-#   secretName: bootstrap-ca
-#   privateKey:
-#     algorithm: RSA
-#     size: 4096
-#   issuerRef:
-#     name: selfsigned-issuer
-#     kind: ClusterIssuer
-#     group: cert-manager.io
-# ---
-apiVersion: v1
-kind: Secret
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
 metadata:
-  name: bigbang-ca
-stringData:
-  tls.cert: ###ZARF_VAR_PUBLIC_CERT###
-  tls.key: ###ZARF_VAR_PUBLIC_KEY###
+  name: selfsigned-issuer
+spec:
+  selfSigned: {}
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: bootstrap-ca-cert
+  namespace: cert-manager
+spec:
+  isCA: true
+  commonName: bootstrap-ca-cert
+  secretName: bootstrap-ca
+  privateKey:
+    algorithm: RSA
+    size: 4096
+  issuerRef:
+    name: selfsigned-issuer
+    kind: ClusterIssuer
+    group: cert-manager.io
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
