--- a/k3d/deploy-cert-resources.yaml
+++ b/k3d/deploy-cert-resources.yaml
@@ -1,66 +1,66 @@
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: selfsigned-issuer
-spec:
-  selfSigned: {}
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: bootstrap-ca-cert
-  namespace: cert-manager
-spec:
-  isCA: true
-  commonName: bootstrap-ca-cert
-  secretName: bootstrap-ca
-  privateKey:
-    algorithm: RSA
-    size: 4096
-  issuerRef:
-    name: selfsigned-issuer
-    kind: ClusterIssuer
-    group: cert-manager.io
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: bigbang-ca-issuer
-  namespace: cert-manager
-spec:
-  ca:
-    secretName: bootstrap-ca
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: admin-cert
-  namespace: istio-system
-spec:
-  isCA: true
-  commonName: bigbang-istio-gateway
-  secretName: admin-cert
-  privateKey:
-    algorithm: RSA
-    size: 4096
-  issuerRef:
-    name: bigbang-ca-issuer
-    kind: ClusterIssuer
-    group: cert-manager.io
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: tenant-cert
-  namespace: istio-system
-spec:
-  isCA: true
-  commonName: bigbang-istio-gateway
-  secretName: tenant-cert
-  privateKey:
-    algorithm: RSA
-    size: 4096
-  issuerRef:
-    name: bigbang-ca-issuer
-    kind: ClusterIssuer
-    group: cert-manager.io
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: selfsigned-issuer
+# spec:
+#   selfSigned: {}
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: Certificate
+# metadata:
+#   name: bootstrap-ca-cert
+#   namespace: cert-manager
+# spec:
+#   isCA: true
+#   commonName: bootstrap-ca-cert
+#   secretName: bootstrap-ca
+#   privateKey:
+#     algorithm: RSA
+#     size: 4096
+#   issuerRef:
+#     name: selfsigned-issuer
+#     kind: ClusterIssuer
+#     group: cert-manager.io
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: ClusterIssuer
+# metadata:
+#   name: bigbang-ca-issuer
+#   namespace: cert-manager
+# spec:
+#   ca:
+#     secretName: bootstrap-ca
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: Certificate
+# metadata:
+#   name: admin-cert
+#   namespace: istio-system
+# spec:
+#   isCA: true
+#   commonName: bigbang-istio-gateway
+#   secretName: admin-cert
+#   privateKey:
+#     algorithm: RSA
+#     size: 4096
+#   issuerRef:
+#     name: bigbang-ca-issuer
+#     kind: ClusterIssuer
+#     group: cert-manager.io
+# ---
+# apiVersion: cert-manager.io/v1
+# kind: Certificate
+# metadata:
+#   name: tenant-cert
+#   namespace: istio-system
+# spec:
+#   isCA: true
+#   commonName: bigbang-istio-gateway
+#   secretName: tenant-cert
+#   privateKey:
+#     algorithm: RSA
+#     size: 4096
+#   issuerRef:
+#     name: bigbang-ca-issuer
+#     kind: ClusterIssuer
+#     group: cert-manager.io
