update zarf package version of cert-manager to 0.9.1; added cert-manager package to realse please config.

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -16,6 +16,7 @@
         "aws/external-dns/zarf.yaml",
         "rke2/zarf.yaml",
         "defense-unicorns-distro/zarf.yaml",
+        "defense-unicorns-distro/cert-manager/zarf.yaml",
         "k3d/zarf.yaml"
       ]
     }
