fix: imports for rke2
Signed-off-by: Micah Nagel <micah.nagel@defenseunicorns.com>

--- a/rke2/zarf.yaml
+++ b/rke2/zarf.yaml
@@ -36,6 +36,8 @@ variables:
 components:
   - name: set-zarf-vars
     required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: preflight
     required: true
     import:
@@ -54,6 +56,8 @@ components:
       path: ../defense-unicorns-distro
   - name: storage-class
     required: true
+    import:
+      path: ../defense-unicorns-distro
   - name: dubbd-pre-upgrade
     required: true
     import:
