--- a/aws/values/aws-velero.yaml
+++ b/aws/values/aws-velero.yaml
@@ -16,6 +16,7 @@ addons:
             provider: aws
             config:
               region: "###ZARF_VAR_VELERO_S3_AWS_REGION###"
+      helmHookAnnotations: true
       schedules:
         udsbackup:
           disabled: false
