--- a/.github/workflows/test-dubbd-rke2-install.yaml
+++ b/.github/workflows/test-dubbd-rke2-install.yaml
@@ -35,7 +35,7 @@ jobs:
         env:
           SHA: ${{ github.sha }}
         run: |
-          terraform init -force-copy \
+          terraform init -force-copy -upgrade \
             -backend-config="bucket=uds-ci-state-bucket" \
             -backend-config="key=tfstate/ci/install/${SHA:0:7}-rke2.tfstate" \
             -backend-config="region=us-west-2" \
