--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -175,6 +175,12 @@ components:
             mute: true
             setVariables:
               - name: TENANT_INGRESS_UPDATE
+          - cmd: |
+              ./zarf tools kubectl get -n velero schedule velero-velero-udsbackup >/dev/null 2>&1 && \
+              ( ./zarf tools kubectl annotate -n velero schedule velero-velero-udsbackup meta.helm.sh/release-namespace=velero && \
+                ./zarf tools kubectl annotate -n velero schedule velero-velero-udsbackup meta.helm.sh/release-name=velero-velero ) || true
+            description: "Annotate Velero Schedule"
+            mute: true
   - name: set-external-dns-domain
     required: true
     import:
