fix: path to flux cli wasn't specified

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -378,4 +378,5 @@ components:
               ./flux suspend helmrelease -n bigbang kyverno-policies --verbose --timeout 15m
               ./zarf tools kubectl delete clusterpolicies --all --ignore-not-found --timeout=2m
               ./flux resume helmrelease -n bigbang kyverno-policies --verbose --timeout 15m
+            dir: run/flux
             description: "Delete & Re-add Kyverno cluster policies (any policies managed outside of DUBBD must be reapplied)"
