chore(deps): update gitlab tag big-bang/bigbang to v2.11.1 (#576)
Release-As: 0.10.0

--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -375,5 +375,8 @@ components:
       onDeploy:
         after:
           - cmd: |
-              ./zarf tools kubectl delete -n kiali secret kiali-grafana-temp-fix-credentials --ignore-not-found --timeout=2m
-            description: "Remove temporary fix secret for Kiali, if present"
+              ./flux suspend helmrelease -n bigbang kyverno-policies --verbose --timeout 15m
+              ./zarf tools kubectl delete clusterpolicies --all --ignore-not-found --timeout=2m
+              ./flux resume helmrelease -n bigbang kyverno-policies --verbose --timeout 15m
+            dir: run/flux
+            description: "Delete & Re-add Kyverno cluster policies (any policies managed outside of DUBBD must be reapplied)"
