--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -1,17 +1,43 @@
 kyverno:
   values:
-    extraArgs:
-      - --clientRateLimitQPS=300
-      - --clientRateLimitBurst=300
-      - --enablePolicyException=true
-      - --loggingFormat=text
-    updateStrategy:
-      rollingUpdate:
-        maxUnavailable: 0
-    resources:
-      requests:
-        cpu: "1000m"
-        memory: "1Gi"
-      limits:
-        cpu: "1000m"
-        memory: "1Gi"
+    features:
+      policyExceptions:
+        enabled: true
+    admissionController:
+      replicas: 3
+      container:
+        extraArgs:
+          - --clientRateLimitQPS=300
+          - --clientRateLimitBurst=300
+        resources:
+          requests:
+            cpu: "1000m"
+            memory: "1Gi"
+          limits:
+            cpu: "1000m"
+            memory: "1Gi"
+      updateStrategy:
+        rollingUpdate:
+          maxUnavailable: 0
+    backgroundController:
+      replicas: 2
+      extraArgs:
+        - --clientRateLimitQPS=300
+        - --clientRateLimitBurst=300
+    cleanupController:
+      replicas: 2
+      extraArgs:
+        - --clientRateLimitQPS=300
+        - --clientRateLimitBurst=300
+    reportsController:
+      replicas: 2
+      extraArgs:
+        - --clientRateLimitQPS=300
+        - --clientRateLimitBurst=300
+      resources:
+        requests:
+          cpu: "1000m"
+          memory: "1Gi"
+        limits:
+          cpu: "1000m"
+          memory: "1Gi"
