--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -7,8 +7,8 @@ kyverno:
       replicas: 3
       container:
         extraArgs:
-          - --clientRateLimitQPS=300
-          - --clientRateLimitBurst=300
+          clientRateLimitQPS: 300
+          clientRateLimitBurst: 300
         resources:
           requests:
             cpu: "1000m"
@@ -22,22 +22,19 @@ kyverno:
     backgroundController:
       replicas: 2
       extraArgs:
-        - --clientRateLimitQPS=300
-        - --clientRateLimitBurst=300
+        clientRateLimitQPS: 300
+        clientRateLimitBurst: 300
     cleanupController:
       replicas: 2
       extraArgs:
-        - --clientRateLimitQPS=300
-        - --clientRateLimitBurst=300
+        clientRateLimitQPS: 300
+        clientRateLimitBurst: 300
     reportsController:
       replicas: 2
       extraArgs:
-        - --clientRateLimitQPS=300
-        - --clientRateLimitBurst=300
+        clientRateLimitQPS: 300
+        clientRateLimitBurst: 300
       resources:
-        requests:
-          cpu: "1000m"
-          memory: "1Gi"
         limits:
-          cpu: "1000m"
-          memory: "1Gi"
+          cpu: "2000m"
+          memory: "2Gi"
