--- a/.github/workflows/validate-oscal.yaml
+++ b/.github/workflows/validate-oscal.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Stepup Java
+      - name: Setup Java
         uses: actions/setup-java@c3ac5dd0ed8db40fedb61c32fbe677e6b355e94c
         with:
           distribution: adopt
