--- a/.github/workflows/validate-oscal.yaml
+++ b/.github/workflows/validate-oscal.yaml
@@ -16,16 +16,21 @@ jobs:
         uses: actions/setup-java@c3ac5dd0ed8db40fedb61c32fbe677e6b355e94c
         with:
           distribution: adopt
-          java-version: 11
+          java-version: 20
         id: setup_java
 
       - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Run oscal-cli for version check (debugging on)
-        uses: oscal-club/oscal-cli-action@v1.0.1
+        uses: oscal-club/oscal-cli-action@v1.0.3
         with:
           args: |
-            oscal-cli component-definition validate defense-unicorns-distro/oscal-component.yaml
-            oscal-cli component-definition validate rke2/oscal-component.yaml
-            oscal-cli component-definition validate aws/dubbd-aws/oscal-component.yaml
+            component-definition validate defense-unicorns-distro/oscal-component.yaml
+            component-definition validate rke2/oscal-component.yaml
+            component-definition validate aws/dubbd-aws/oscal-component.yaml
+      - name: Debugging - Print Directory Content
+        run: |
+          echo "Current Directory: $(pwd)"
+          ls -alh
+          oscal-cli --version
