--- a/patches/flux-overrides-helm-controller-deploy.yaml
+++ b/patches/flux-overrides-helm-controller-deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: source-controller
+  name: helm-controller
   namespace: flux-system
 spec:
   template:
@@ -10,8 +10,6 @@ spec:
         - name: manager
           resources:
             limits:
-              cpu: 300m
-              memory: 768Mi
+              cpu: 1200m
             requests:
-              cpu: 300m
-              memory: 768Mi
+              cpu: 1200m
