fix: update custom policy details

--- a/k3d/values/local-dev.yaml
+++ b/k3d/values/local-dev.yaml
@@ -30,7 +30,7 @@ kyvernoPolicies:
       restrict-pod-image-registries:
         spec:
           rules:
-            - name: validate-registries
+            - name: validate-pod-registries
               exclude:
                 any:
                   - resources:
