fix: bump to BB 2.13.1 and neuvector fix

--- a/values/neuvector.yaml
+++ b/values/neuvector.yaml
@@ -3,6 +3,7 @@ neuvector:
   ingress:
     gateway: "admin"
   values:
+    autoGenerateCert: false
     monitor:
       exporter:
         CTRL_USERNAME: metrics
